# just-shield

./: .gitattributes  .scratch-commit47.txt  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  README.md  action.yml  index.js
.github/workflows/: advisory-reminder.yml  ci.yml  online-scan.yml  release.yml
data/: advisories.txt  popular-actions.txt
docs/: cli.md  design-summary.html  usage.md
docs/adr/: 0001-rule-scope-ingestion-plus-blast-radius.md  0002-fact-based-verdicts.md  0003-shield-lock-tag-movement-detection.md  0004-rust-implementation.md  0005-distribution-strategy.md  0006-egress-policy-layer-not-enforcement.md
docs/agents/: issue-tracker.md
scripts/: observe-report.sh  observe-start.sh  run.sh
src/: advisory.rs  config.rs  dns_observer.rs  egress_lockfile.rs  fix.rs  github_facts.rs  lib.rs  lockfile.rs  main.rs  observe.rs  report.rs  rules.rs  suppress.rs  trust.rs  typosquat.rs  uses_ref.rs  workflow.rs
tests/: corpus.rs  dns_observer.rs  fix.rs  lock.rs  observe_report.rs  online_rules.rs  sarif.rs  scan.rs  typosquat_rule.rs
tests/corpus/: README.md
tests/corpus/attacks/impostor-commit/: facts.txt
tests/corpus/attacks/secrets-harvest/: expected.txt
tests/corpus/attacks/tag-moved/: facts.txt
tests/e2e/: egress-e2e.sh
tests/fixtures/advisory/.github/workflows/: ci.yml
tests/fixtures/blast/.github/workflows/: danger.yml
tests/fixtures/egress/records/: build-unlocked.txt  release-clean.txt  release-exfil.txt
tests/fixtures/trusted/: .just-shield.conf
tests/snapshots/: violation.sarif
(+20 files in other folders)
