[package]
name = "just-shield"
version = "0.3.0"
edition = "2024"
description = "Pre-execution supply-chain scanner for GitHub Actions workflows"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/just-shield"
readme = "README.md"
keywords = ["supply-chain", "github-actions", "security", "ci", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]

# 릴리스 바이너리 최적화 — 의존성 0의 단일 바이너리를 작고 재현 가능하게.
[profile.release]
strip = true
lto = true
